--- a/views/articulo.ejs
+++ b/views/articulo.ejs
@@ -72,7 +72,7 @@
               <p class="card-text" id="marca"> Color: <%= " " + articulo.color %> </p>
               <p class="card-text">Disponibles: <%= " " + articulo.cantidad %> </p>
               <p class="card-text">Descripción:</p>
-              <p class="card-text text-muted"> <%=  articulo.descripcion %> .</p>
+              <p class="card-text text-muted"> <%=  articulo.descripcion %> </p>
               <p class="card-text"><small class="text-primary">Llega mañana.</small></p>
               <div class="form-group">
                 <label for="cantidad">Cantidad:</label>
