--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -61,17 +61,20 @@
             </div>
 
             <div class="d-flex justify-content-center mb-3 ">
-  <div class="card text-white bg-warning mb-3 mr-3 shadow" style="max-width: 40%;">
+  <div class="card text-white bg-warning mb-3 mr-3 shadow" style="max-width: 80%;">
     <div class="card-header">Productos por mes.</div>
     <div class="card-body">
-      <canvas id="myChart2" width="300px" height="200px"></canvas>
+      <canvas id="myChart2" width="600px" height="200px"></canvas>
     </div>
   </div>
-  <div class="card bg-light mb-3 mr-3 shadow" style="max-width: 40%;">
+</div>
+<div class="d-flex justify-content-center mb-3 ">
+  <div class="card bg-light mb-3 mr-3 shadow" style="max-width: 80%;">
     <div class="card-header">Articulos más vendidos. </div>
     <div class="card-body">
-      <canvas id="myChart3" width="300px" height="200px"></canvas>
+      <canvas id="myChart3" width="600px" height="300px"></canvas>
     </div>
+  </div>
   </div>
             </div>
 
